@@ -1,3 +1,4 @@
 coverage
 pkg
 *.gem
+*.swp
