@@ -16,7 +16,7 @@ module RecordFilter
       @model_class.quoted_table_name
     end
 
-    def join_association(association_name, join_type=nil, source_type=nil)
+    def join_association(association_name, join_type=nil, options={})
       @joins_cache[association_name] ||=
         begin
           association = @model_class.reflect_on_association(association_name)
@@ -25,13 +25,19 @@ module RecordFilter
           end
           if (association.options[:through])
             through_association = @model_class.reflect_on_association(association.options[:through])
-            through_join = join_association(association.options[:through], join_type)
+
+            through_join = join_association(
+              association.options[:through], 
+              join_type, 
+              :type_restriction => association.options[:source_type], 
+              :source => association.options[:source])
+
             through_join.right_table.join_association(
-              association.options[:source] || association_name, join_type, association.options[:source_type])
+              association.options[:source] || association_name, join_type, :join_class => association.options[:source_type])
           else
             case association.macro
             when :belongs_to, :has_many, :has_one
-              simple_join(association, join_type, source_type)
+              simple_join(association, join_type, options)
             when :has_and_belongs_to_many
               compound_join(association, join_type)
             end
@@ -69,20 +75,25 @@ module RecordFilter
 
     private
 
-    def simple_join(association, join_type, source_type)
+    def simple_join(association, join_type, options)
       join_predicate =
         case association.macro
         when :belongs_to
-          [{ association.options[:foreign_key] || association.association_foreign_key.to_sym => :id }]
+          [{ association.options[:foreign_key] || association.association_foreign_key.to_sym => @model_class.primary_key }]
         when :has_many, :has_one
-          [{ association.options[:primary_key] || :id => association.primary_key_name.to_sym }]
+          [{ association.options[:primary_key] || @model_class.primary_key => association.primary_key_name.to_sym }]
         end
 
       if association.options[:as]
         join_predicate << DSL::Restriction.new(association.options[:as].to_s + '_type').equal_to(association.active_record.base_class.name)
       end
 
-      clazz = source_type.nil? ? association.klass : source_type.constantize
+      if options[:type_restriction] && options[:source]
+        foreign_type = association.klass.reflect_on_association(options[:source]).options[:foreign_type]
+        join_predicate << DSL::Restriction.new(foreign_type).equal_to(options[:type_restriction])
+      end
+
+      clazz = options[:join_class].nil? ? association.klass : options[:join_class].constantize
 
       join_table = Table.new(clazz, alias_for_association(association))
       @joins << join = Join.new(self, join_table, join_predicate, join_type)
@@ -90,11 +101,11 @@ module RecordFilter
     end
 
     def compound_join(association, join_type)
-      pivot_join_predicate = [{ :id => association.primary_key_name.to_sym }]
+      pivot_join_predicate = [{ @model_class.primary_key => association.primary_key_name.to_sym }]
       table_name = @model_class.connection.quote_table_name(association.options[:join_table])
       pivot_table = PivotTable.new(table_name, association, "__#{alias_for_association(association)}")
       pivot_join = Join.new(self, pivot_table, pivot_join_predicate, join_type)
-      join_predicate = [{ association.association_foreign_key.to_sym => :id }]
+      join_predicate = [{ association.association_foreign_key.to_sym => @model_class.primary_key }]
       join_table = Table.new(association.klass, alias_for_association(association))
       pivot_table.joins << join = Join.new(pivot_table, join_table, join_predicate, join_type)
       @joins << pivot_join
